--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     </head>
     <body style="width:100%; height: 100%; margin: 0px;">
         <div id="container" class="container"></div>
-        <script type="text/javascript" async src="./dist/js/main.min.js"></script>
-        <script type="text/javascript" async src="./dist/js/vendor.min.js"></script>
+        <script type="text/javascript" async src="/dist/js/main.min.js"></script>
+        <script type="text/javascript" async src="/dist/js/vendor.min.js"></script>
     </body>
 </html>
